@@ -36,8 +36,10 @@ apport (0.45) UNRELEASED; urgency=low
   * apport/report.py test suite: Use gdb to generate a test core dump, do not
     rely on kill(SIGSEGV) and the kernel to do it (since we now use a pipe in
     core_pattern).
+  * apport/report.py test suite: Refactorize generation of test crash program
+    and core dump generation.
 
- -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 27 Jan 2007 09:46:09 +0100
+ -- Martin Pitt <martin.pitt@ubuntu.com>  Sat, 27 Jan 2007 09:59:14 +0100
 
 apport (0.44) feisty; urgency=low
 
